Made header more stable

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 	    <link rel="stylesheet" href="css/bootstrap-responsive.css">
-	    <link rel="stylesheet" href="css/bootstrap-custom.css">
-	    <link rel="stylesheet" href="css/fontAwesome/css/font-awesome.min.css">	    	   
+	    <link rel="stylesheet" href="css/fontAwesome/css/font-awesome.min.css">
+	    <link rel="stylesheet" href="css/bootstrap-custom.css">	    	    	   
         <link rel="shortcut icon" href="img/em_favicon.ico"/>	    
 		<link rel="apple-touch-icon" href="img/em_apple_icon.png"/>	    
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -37,16 +37,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">etiqt</a>
+          <a class="brand"><img src="img/em_logo.png"></a>
+          
           <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">
-              Logged in as <a href="#" class="navbar-link">Username</a>
-            </p>
             <ul class="nav">
-              <li><a href="#" style="color:green"><i class="icon-list-ul icon-2x"></i>Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+            	<div class="vertical-divider"></div>
+              <li><a href="#" class="navbar-anchor"><i class="icon-map-marker icon-2x"></i>Events</a></li>
+              <div class="vertical-divider"></div>                
+              <li><a href="#" class="navbar-anchor"><i class="icon-bell-alt icon-2x"></i>Ending Soon</a></li>
+              <div class="vertical-divider"></div>              
             </ul>
+            <ul class="nav pull-right">
+            <li>
+            <a href="#" class="navbar-anchor"><i class="icon-group icon-2x"></i>About Us</a>
+            </li>              
+            </ul>            
           </div><!--/.nav-collapse -->
         </div>
       </div>
