--- a/index.html
+++ b/index.html
@@ -82,22 +82,54 @@
     	
     </div>
     </div>
+
     </div>
+<br/>        
     <div class="container-fluid">
-    <div class="row-fluid" style="height: 50px;">
-    	Featured in Paris
-    </div>
+
     <div class="row-fluid">
-    	<div class="span4">
-    		<img src="img/testImg3.jpg" />
+    	<div class="span6 boxes">
+    	<span class="discount rotate-45">20% OFF</span>
+<a><img src="img/notebook_long.jpg" style="width:100%"/></a>    		
+<div class="promotionInfo">
+        <div class="wrapper">
+            <span class="date">
+                <strong>MON<span class="color-yellow">05/06</span></strong> AT <strong>11AM</strong> ET            </span>
+            <span class="title">
+                <p>Eco-friendly Organic Notebooks</p>
+            </span>
+        </div>    
+</div>    		
+
     	</div>
-    	<div class="span4">
-    		<img src="img/testImg3.jpg" />
+
+    	<div class="span3">
+    		<img src="img/squirell.jpg" />
+    	<div class="productInfo">
+				<a href="#" class="title">Rio Poster A2</a>
+                <br>
+				<small class="brand smalldontshow">By <a>eBoy</a></small>
+                <span class="price"></span>
+    	</div>	
+
     	</div>
-    	<div class="span4">
-    		<img src="img/testImg3.jpg" />
-    	</div>
+        <div class="span3">
+    		<img src="img/wallPrint.jpg" />
+    	<div class="productInfo">
+				<a href="#" class="title">Rio Poster A2</a>
+                <br>
+				<small class="brand smalldontshow">By <a>eBoy</a></small>
+                <span class="price"></span>
+    	</div>    		
+    	</div>	
     </div>
+    <br/><br/><br/><br/>    
+        <div class="row-fluid">
+        <div class="span12 pagination-centered">
+        <span><button class="btn btn-large">Show More</button></span>
+        </div>
+        </div>
+<br/><br/><br/><br/>        
     </div>
     
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
