mobile version refined

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
     	</div>
 
-    	<div class="span3">
-    		<img src="img/squirell.jpg" />
+    	<div class="span3 c-thumbnail">
+    		<img src="img/fancy5.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
                 <br>
@@ -113,8 +113,8 @@
     	</div>	
 
     	</div>
-        <div class="span3">
-    		<img src="img/wallPrint.jpg" />
+        <div class="span3 c-thumbnail">
+    		<img src="img/fancy6.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
                 <br>
@@ -122,6 +122,48 @@
                 <span class="price"></span>
     	</div>    		
     	</div>	
+    </div>
+    <div class="row-fluid">
+    	<div class="span3 c-thumbnail">
+    		<img src="img/fancy1.jpg" />
+    	<div class="productInfo">
+				<a href="#" class="title">Rio Poster A2</a>
+                <br>
+				<small class="brand smalldontshow">By <a>eBoy</a></small>
+                <span class="price"></span>
+    	</div>	
+
+    	</div>
+    	<div class="span3 c-thumbnail">
+    		<img src="img/fancy2.jpg" />
+    	<div class="productInfo">
+				<a href="#" class="title">Rio Poster A2</a>
+                <br>
+				<small class="brand smalldontshow">By <a>eBoy</a></small>
+                <span class="price"></span>
+    	</div>	
+
+    	</div>
+    	<div class="span3 c-thumbnail">
+    		<img src="img/fancy3.jpg" />
+    	<div class="productInfo">
+				<a href="#" class="title">Rio Poster A2</a>
+                <br>
+				<small class="brand smalldontshow">By <a>eBoy</a></small>
+                <span class="price"></span>
+    	</div>	
+
+    	</div>
+    	<div class="span3 c-thumbnail">
+    		<img src="img/fancy4.jpg" />
+    	<div class="productInfo">
+				<a href="#" class="title">Rio Poster A2</a>
+                <br>
+				<small class="brand smalldontshow">By <a>eBoy</a></small>
+                <span class="price"></span>
+    	</div>	
+
+    	</div>
     </div>
     <br/><br/><br/><br/>    
         <div class="row-fluid">
