--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     	</div>
 
     	<div class="span3 c-thumbnail">
-    		<img src="img/fancy5.jpg" />
+    		<img src="img/pw1.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
                 <br>
@@ -114,7 +114,7 @@
 
     	</div>
         <div class="span3 c-thumbnail">
-    		<img src="img/fancy6.jpg" />
+    		<img src="img/pw2.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
                 <br>
@@ -125,7 +125,7 @@
     </div>
     <div class="row-fluid">
     	<div class="span3 c-thumbnail">
-    		<img src="img/fancy1.jpg" />
+    		<img src="img/pw3.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
                 <br>
@@ -135,7 +135,7 @@
 
     	</div>
     	<div class="span3 c-thumbnail">
-    		<img src="img/fancy2.jpg" />
+    		<img src="img/pw4.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
                 <br>
@@ -145,7 +145,7 @@
 
     	</div>
     	<div class="span3 c-thumbnail">
-    		<img src="img/fancy3.jpg" />
+    		<img src="img/pw5.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
                 <br>
@@ -155,7 +155,7 @@
 
     	</div>
     	<div class="span3 c-thumbnail">
-    		<img src="img/fancy4.jpg" />
+    		<img src="img/pw6.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
                 <br>
