like icon added

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
     	</div>
 
     	<div class="span3 c-thumbnail">
+    		<span class="c-buttons">
+    			<a href="#"><i class="icon-heart"></i></a>
+    		</span>
     		<img src="img/pw1.jpg" />
     	<div class="productInfo">
 				<a href="#" class="title">Rio Poster A2</a>
